@@ -1,3 +1,8 @@
+2006-11-17  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
+
+	* src/libYARP_OS/include/yarp/ShmemTwoWayStream.h: removed
+	some YARP1 cruft and increased the default buffer size.
+
 2006-11-16  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
 
 	* src/libYARP_dev/src/jrkerr: IST checked in a windows Jrkerr
